--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,11 @@
 
   <link rel="shortcut icon" href="./earth.png" type="image/x-icon">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" />
-
-  <title>Place's</title>
+  <title>Video Gallery</title>
 
 </head>
 
-<body>
+<body class="bg-orange-500 p-5">
 
   <div id="root"></div>
 
