--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/user.png" />
 
-  <title>Raf learning</title>
+  <title>Tailwind Portfolio</title>
 </head>
 
 <body>
 
-  <div id="root"></div>
+  <div id="root"> </div>
 
 </body>
 
